<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App name -->
    <string name="app_name">Restaurant Automation System</string>
    <string name="app_name_short">RAS</string>

    <!-- Activity and fragment names -->
    <string name="name_activity_login">Login</string>
    <string name="name_fragment_serve_tables">Serve Tables</string>
    <string name="name_activity_table_order">Create Order</string>
    <string name="name_fragment_order_queue">Order Queue</string>
    <string name="name_activity_order_items">Order Items</string>
    <string name="name_activity_order_detail">Order Details</string>
    <string name="name_fragment_manage_employees">Manage Employees</string>
    <string name="name_activity_add_employee">Add Employee</string>
    <string name="name_activity_modify_employee">Modify Employee</string>
    <string name="name_fragment_manage_inventory">Manage Inventory</string>
    <string name="name_activity_add_inventory_item">Add Inventory Item</string>
    <string name="name_activity_modify_inventory_item">Modify Inventory Item</string>
    <string name="name_fragment_manage_menu">Manage Menu</string>
    <string name="name_activity_add_menu_item">Add Menu Item</string>
    <string name="name_activity_modify_menu_item">Modify Menu Item</string>
    <string name="name_fragment_manage_tables">Manage Tables</string>
    <string name="name_activity_add_table">Add Table</string>
    <string name="name_activity_modify_table">Modify Table</string>
    <string name="name_fragment_view_employee_hours">View Employee Hours</string>
    <string name="name_fragment_view_employee_log">View Employee Log</string>
    <string name="name_fragment_view_order_history">View Order History</string>
    <string name="name_activity_view_order_history_items">Order Items</string>
    <string name="name_activity_view_order_history_detail">Order Details</string>

    <!-- TextView labels -->
    <string name="label_username">Username:</string>
    <string name="label_password">Password:</string>
    <string name="label_total">Total:</string>
    <string name="label_order">Order %1$s</string>
    <string name="label_status">Status: %1$s</string>
    <string name="label_total_price">Total Price: %1$s</string>
    <string name="label_date">Date Ordered: %1$s</string>
    <string name="label_time">Time Ordered: %1$s</string>
    <string name="label_origin_table">Origin Table Name: %1$s</string>

    <string name="label_first_name">First name:</string>
    <string name="label_last_name">Last name:</string>
    <string name="label_role">"Role:"</string>
    <string name="label_name">"Name:"</string>
    <string name="label_quantity">Quantity:</string>
    <string name="label_price">"Price:"</string>
    <string name="label_category">"Category:"</string>

    <!-- EditText hints -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_name">Name</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_price">Price</string>
    <string name="hint_category">Category</string>

    <!-- Spinner option arrays -->
    <array name="spinner_options_role">
        <item>Host</item>
        <item>Waiter</item>
        <item>Cook</item>
        <item>Busboy</item>
        <item>Manager</item>
    </array>

    <!-- Button text -->
    <string name="button_login">Login</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_save">Save</string>
    <string name="button_increment">+</string>
    <string name="button_decrement">-</string>

    <!-- Dialog text -->
    <string name="dialog_table_options_title">Choose an action</string>
    <array name="dialog_table_options_options">
        <item>Update Status</item>
        <item>Take Order</item>
    </array>

    <string name="dialog_table_status_title">Choose a status</string>
    <array name="dialog_table_status_options">
        <item>Ready</item>
        <item>Occupied</item>
        <item>Dirty</item>
    </array>

    <string name="dialog_order_options_title">Choose an action</string>
    <array name="dialog_order_options_options">
        <item>Update Status</item>
        <item>View Items</item>
        <item>View Details</item>
    </array>

    <string name="dialog_order_status_title">Choose a status</string>
    <array name="dialog_order_status_options">
        <item>In Progress</item>
        <item>Ready For Table</item>
        <item>Completed</item>
    </array>

    <string name="dialog_order_history_title">Choose an action</string>
    <array name="dialog_order_history_options">
        <item>View Items</item>
        <item>View Details</item>
    </array>

    <string name="dialog_positive_button_text">OK</string>
    <string name="dialog_negative_button_text">Cancel</string>

    <!-- NavigationDrawer text -->
    <string name="drawer_menu_employee_functions">Employee Functions</string>
    <string name="drawer_menu_manager_functions">Manager Functions</string>
    <string name="drawer_open">Drawer is open</string>
    <string name="drawer_closed">Drawer is closed</string>

    <!-- Toolbar action text -->
    <string name="action_log_out">Log Out</string>
    <string name="action_submit_order">Submit</string>
    <string name="action_add_employee">Add employee</string>
    <string name="action_add_table">Add table</string>
    <string name="action_add_inventory_item">Add item</string>
    <string name="action_add_menu_item">Add item</string>

    <!-- Toast messages -->
    <string name="toast_login_failed">Login failed due to database error</string>
    <string name="toast_login_invalid">Entered username or password is incorrect</string>

    <string name="toast_employee_account_active">Employee account is already logged in</string>
    <string name="toast_employee_account_modified">Employee account modified by a Manager</string>
    <string name="toast_employee_account_deleted">Employee account deleted by a Manager</string>

    <string name="toast_update_table_status_to_occupied">Update status to "occupied" to take orders</string>
    <string name="toast_update_table_status_failed">Table status not updated due to database error</string>
    <string name="toast_add_order_failed">Order not submitted due to database error</string>
    <string name="toast_order_invalid">Add at least one item</string>

    <string name="toast_update_order_status_failed">Order status not updated due to database error</string>
    <string name="toast_selected_order_modified">Order modified by another user</string>
    <string name="toast_selected_order_deleted">Order deleted by another user</string>

    <string name="toast_object_invalid_blank">Fill all fields</string>

    <string name="toast_add_employee_failed">Employee not added due to database error</string>
    <string name="toast_delete_employee_failed">Employee not deleted due to database error</string>
    <string name="toast_modify_employee_failed">Employee not modified due to database error</string>
    <string name="toast_selected_employee_modified">Employee modified by another user</string>
    <string name="toast_selected_employee_deleted">Employee deleted by another user</string>
    <string name="toast_employee_username_invalid">Enter a unique username</string>
    <string name="toast_employee_username_or_password_invalid">Username and password may not contain the \"|\" symbol</string>

    <string name="toast_add_inventory_item_failed">Item not added due to database error</string>
    <string name="toast_delete_inventory_item_failed">Item not deleted due to database error</string>
    <string name="toast_modify_inventory_item_failed">Item not modified due to database error</string>
    <string name="toast_selected_inventory_item_modified">Item modified by another user</string>
    <string name="toast_selected_inventory_item_deleted">Item deleted by another user</string>
    <string name="toast_inventory_item_name_invalid">Enter a unique name</string>

    <string name="toast_add_menu_item_failed">Item not added due to database error</string>
    <string name="toast_delete_menu_item_failed">Item not deleted due to database error</string>
    <string name="toast_modify_menu_item_failed">Item not modified due to database error</string>
    <string name="toast_selected_menu_item_modified">Item modified by another user</string>
    <string name="toast_selected_menu_item_deleted">Item deleted by another user</string>
    <string name="toast_menu_item_name_invalid">Enter a unique name</string>
    <string name="toast_menu_item_price_invalid">Format price with two decimal places"</string>

    <string name="toast_add_table_failed">Table not added due to database error</string>
    <string name="toast_delete_table_failed">Table not deleted due to database error</string>
    <string name="toast_modify_table_failed">Table not modified due to database error</string>
    <string name="toast_selected_table_modified">Table modified by another user</string>
    <string name="toast_selected_table_deleted">Table deleted by another user</string>
    <string name="toast_table_name_invalid">Enter a unique name</string>

    <!-- ListView empty text -->
    <string name="empty_text_add_order">There are no menu items</string>
    <string name="empty_text_serve_tables">There are no tables</string>
    <string name="empty_text_order_queue">There are no orders</string>
    <string name="empty_text_order_items">There are no menu items</string>
    <string name="empty_text_manage_employees">There are no employees</string>
    <string name="empty_text_manage_inventory">There are no inventory items</string>
    <string name="empty_text_manage_menu">There are no menu items</string>
    <string name="empty_text_manager_manage_tables">There are no tables</string>
    <string name="empty_text_view_order_history">There is no order history</string>

    <!-- Log messages -->
    <string name="log_user_login">%1$s %2$s logged in</string>
    <string name="log_user_logout">%1$s %2$s logged out</string>
    <string name="log_user_changed_table_status">%1$s %2$s changed status of %3$s to %4$s</string>
    <string name="log_user_changed_order_status">%1$s %2$s changed status of Order %3$s to %4$s</string>
    <string name="log_user_submitted_order">%1$s %2$s submitted Order %3$s from %4$s to the Order Queue</string>

    <!-- Other -->
    <string name="format_full_name">%1$s %2$s</string>
    <string name="default_total_price">$0.00</string>
    <string name="empty_text_view_employee_log">There are no log entries</string>

</resources>
