<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/drawer_menu_employee_functions">
        <menu>
            <item
                android:id="@+id/drawer_menu_table_list"
                android:title="@string/name_fragment_table_list" />
            <item
                android:id="@+id/drawer_menu_order_queue"
                android:title="@string/name_fragment_order_queue" />
        </menu>
    </item>

    <item android:title="@string/drawer_menu_manager_functions">
        <menu>
            <item
                android:id="@+id/drawer_menu_view_reports"
                android:title="@string/name_fragment_view_reports" />
            <item
                android:id="@+id/drawer_menu_manage_employees"
                android:title="@string/name_fragment_manage_employees" />
            <item
                android:id="@+id/drawer_menu_manage_inventory"
                android:title="@string/name_fragment_manage_inventory" />
            <item
                android:id="@+id/drawer_menu_manage_tables"
                android:title="@string/name_fragment_manage_tables" />
            <item
                android:id="@+id/drawer_menu_manage_menu"
                android:title="@string/name_fragment_manage_menu" />
        </menu>
    </item>

</menu>