<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context=".Activities.ModifyEmployeeActivity">

    <TextView
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_first_name" />

    <EditText
        android:id="@+id/edittext_modify_employee_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_first_name" />

    <TextView
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_last_name" />

    <EditText
        android:id="@+id/edittext_modify_employee_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_last_name" />

    <TextView
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_username" />

    <EditText
        android:id="@+id/edittext_modify_employee_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username" />

    <TextView
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password" />

    <EditText
        android:id="@+id/edittext_modify_employee_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password" />

    <TextView
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_role" />

    <Spinner
        android:id="@+id/spinner_modify_employee_role"
        style="@style/Spinner.Default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_delete_employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete" />

        <Button
            android:id="@+id/button_save_employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save" />

    </LinearLayout>

</LinearLayout>