<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context=".Activities.ModifyMenuItemActivity">

    <TextView
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name" />

    <EditText
        android:id="@+id/edit_text_modify_menu_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="textCapWords" />

    <TextView
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_price" />

    <EditText
        android:id="@+id/edit_text_modify_menu_item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_price"
        android:inputType="numberDecimal" />

    <TextView
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_category" />

    <EditText
        android:id="@+id/edit_text_modify_menu_item_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_category"
        android:inputType="textCapWords" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_modify_menu_item_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete" />

        <Button
            android:id="@+id/button_modify_menu_item_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save" />

    </LinearLayout>

</LinearLayout>