<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.AddOrderActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/text_view_add_order_empty"
            style="@style/TextView.EmptyListViewText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/empty_text_add_order" />

        <ExpandableListView
            android:id="@+id/list_view_add_order"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/item_padding">

            <TextView
                style="@style/TextView.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_total" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_view_add_order_total_price"
                style="@style/TextView.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_total_price" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>